--- a/index.html
+++ b/index.html
@@ -743,13 +743,13 @@
       const screenPos = camera.worldToScreen(posX + .5, posY + .5, ctx.canvas.width, ctx.canvas.height);
 
       if (marker.text) {
-        const textSizeMap         = marker.textSizeMap             || 120;
-        const textSizeScreen      = marker.textSizeScreen          || 30;
+        const textSizeMap         = marker.textSizeMap             || 95;
+        const textSizeScreen      = marker.textSizeScreen          || textSizeMap / 2;
         ctx.textAlign             = marker.textAlign               || 'center';
         ctx.textBaseline          = marker.textBaseline            || 'middle';
         ctx.strokeStyle           = marker.textStrokeStyle         || '#000';
         ctx.fillStyle             = marker.textFillStyle           || '#f00';
-        const lineWidthPercentage = marker.textLineWidthPercentage || .1;
+        const lineWidthPercentage = marker.textLineWidthPercentage || .075;
 
         const textSize = Math.min(textSizeMap * camera.scale, textSizeScreen * cssToDevicePixelRatio);
         ctx.font = `${textSize}px MinecraftItalic`;
@@ -771,10 +771,13 @@
             .then(image => {
               icons.set(marker.iconPath, image);
               onRedrawNeeded();
+            })
+            .catch(err => {
+              // TODO
             });
-        } else {
-          const iconScaleMap    = marker.iconScaleMap    || 12;
-          const iconScaleScreen = marker.iconScaleScreen || 3;
+        } else if (marker !== null) {
+          const iconScaleMap    = marker.iconScaleMap    || 6;
+          const iconScaleScreen = marker.iconScaleScreen || iconScaleMap / 2;
           const iconScale = Math.min(iconScaleMap * camera.scale, iconScaleScreen * cssToDevicePixelRatio);
           ctx.drawImage(icon, screenPos.x - icon.width/2 * iconScale, screenPos.y - icon.height/2 * iconScale, icon.width * iconScale, icon.height * iconScale);
         }
@@ -801,8 +804,8 @@
 
     let showMarkers = false;
     let markers = [
-      { x:  2784, z: -376, y:  125, iconPath: '/icons/redstone.png'     },
-      { x:   946, z: -374, y:  142, iconPath: '/icons/coal.png'         },
+      { x:  2784, z:  -376, y:  125, iconPath: '/icons/redstone.png'    },
+      { x:   946, z:  -374, y:  142, iconPath: '/icons/coal.png'        },
       { x:   615, z:  -781, y:  98, iconPath: '/icons/diamond.png'      },
       { x:  2433, z:  -661, y:  82, iconPath: '/icons/diamond.png'      },
       { x:   958, z:   995, y:  92, iconPath: '/icons/gold_ingot.png'   },
@@ -811,21 +814,43 @@
       { x:  1657, z:  -287, y:  69, iconPath: '/icons/iron_ingot.png'   },
       { x:  1380, z:   630, y: 139, iconPath: '/icons/iron_ingot.png'   },
       { x:  1478, z: -1467, y: 137, iconPath: '/icons/lapis_lazuli.png' },
-      { x:  2244, z:  -767, textFillStyle: '#f300f3', text: 'Renkai'                },
-      { x:   943, z:  -265, textFillStyle: '#f90120', text: 'Sarkovia'              },
-      { x:  2656, z:    98, textFillStyle: '#de8644', text: 'Imperium'              },
-      { x:  1421, z:  1124, textFillStyle: '#b9bbcc', text: 'Checkerboard Union'    },
-      { x:   -46, z:  1487, textFillStyle: '#559b16', text: 'The SWTZ'              },
-      { x: -1219, z:   445, textFillStyle: '#f38912', text: 'The Holy Hydra Empire' },
-      { x: -1427, z:  -960, textFillStyle: '#bbdc65', text: 'Helioria'              },
-      { x:  1670, z:  -365, textFillStyle: '#6767ea', text: 'Polestar'              },
-      { x:  -123, z:  -389, textFillStyle: '#01fefe', text: 'Cooked v2'             },
-      { x: -2416, z:   507, textFillStyle: '#32ed22', text: 'El Gran Cartel'        },
-      { x:  2517, z: -1470, textFillStyle: '#fe3333', text: 'Northelios'            },
-      { x:  -123, z: -1346, textFillStyle: '#43a6d9', text: 'Pantha'                },
-      { x: -2910, z: - 543, textFillStyle: '#d1502f', text: 'Soup Bowl'             },
-      { x:  1583, z: -1323, textFillStyle: '#8667de', text: 'Penguinia'             },
-      { x:  3050, z:  1271, textFillStyle: '#56935b', text: 'Harvestspire'          },
+
+      { x:  -116, z:  1175, iconPath: '/icons/lapis_lazuli.png' },
+      { x:  -353, z:   702, iconPath: '/icons/coal.png'        },
+      { x:  -461, z:   704, iconPath: '/icons/iron_ingot.png'   },
+      { x:  -470, z:  1557, iconPath: '/icons/redstone.png'    },
+      { x:  -594, z:   189, iconPath: '/icons/redstone.png'    },
+      { x:  -527, z:  -517, iconPath: '/icons/lapis_lazuli.png' },
+      { x:  -494, z: -1089, iconPath: '/icons/iron_ingot.png'   },
+      { x: -1264, z:   -58, y: 77, iconPath: '/icons/copper_ingot.png'   },
+      { x: -1406, z:  -791, iconPath: '/icons/coal.png'        },
+      { x: -1921, z:  -771, iconPath: '/icons/diamond.png'      },
+      { x: -1787, z:  -148, iconPath: '/icons/iron_ingot.png'   },
+      { x: -1500, z:   691, iconPath: '/icons/iron_ingot.png'   },
+      { x: -2020, z:   907, iconPath: '/icons/diamond.png'      },
+      { x: -2851, z:   973, iconPath: '/icons/coal.png'        },
+      { x: -2784, z:  -673, iconPath: '/icons/coal.png'        },
+      { x: -2966, z:  -844, iconPath: '/icons/iron_ingot.png'   },
+
+      { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 95,  text: 'Renkai'                  },
+      { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 95,  text: 'Northelios'              },
+      { x:  2683, z:   452, textFillStyle: '#de8644', textSizeMap: 103, text: 'Imperium'                },
+      { x:   973, z:  -260, textFillStyle: '#f90120', textSizeMap: 109, text: 'Sarkovia'                },
+      { x:  1722, z:  -416, textFillStyle: '#6767ea', text: 'Polestar'                },
+      //{ x:  2275, z:  -378, textFillStyle: '#f35e0e', textBaseline: 'top',    text: 'Oranjestad'             },
+      //{ x:  2458, z:  -426, textFillStyle: '#8be6f0', textBaseline: 'bottom', text: 'The Federation of Ironhill' },
+      //{ x:  2429, z:  -553, textFillStyle: '#f300f3', textBaseline: 'bottom', text: 'Hoseki D.O.' },
+      { x:  -505, z:   515, textFillStyle: '#ffdd33', textSizeMap: 143, text: 'Kingdom of Chimera'   },
+      { x:   -59, z:  1506, textFillStyle: '#559b16', textSizeMap: 78, text: 'The SWTZ'                },
+      { x:  3049, z:  1277, textFillStyle: '#56935b', textSizeMap: 74, textAlign: 'left', text: '  Harvestspire'            },
+      { x:  2655, z:  1176, textFillStyle: '#fffa96', textSizeMap: 85, text: 'Universale'            },
+      { x: -2363, z:   524, textFillStyle: '#32ed22', textSizeMap: 78, text: 'El Gran Cartel'          },
+      { x: -1387, z:  -949, textFillStyle: '#bbdc65', textSizeMap: 88, text: 'Helioria'                },
+      { x:  -113, z: -1342, textFillStyle: '#43a6d9', text: 'Pantha'                  },
+
+      { x:  1421, z:  1124, textFillStyle: '#b9bbcc', text: 'Checkerboard Union'      },
+      { x: -2910, z: - 543, textFillStyle: '#d1502f', text: 'Soup Bowl'               },
+      { x:  1583, z: -1323, textFillStyle: '#8667de', text: 'Penguinia'               },
     ];
 
     document.addEventListener('keydown', e => {
