--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@
 
     let showMarkers = false;
     let markers = [
+      { x:   -62, z:   708, y: 123, iconPath: '/icons/coal.png'        },
       { x:  2784, z:  -376, y: 125, iconPath: '/icons/redstone.png'    },
       { x:   946, z:  -374, y: 142, iconPath: '/icons/coal.png'        },
       { x:   615, z:  -781, y:  98, iconPath: '/icons/diamond.png'      },
