add diamond node

--- a/index.html
+++ b/index.html
@@ -819,9 +819,9 @@
 
     let showMarkers = false;
     let markers = [
-      { x:   -62, z:   708, y: 123, iconPath: '/icons/coal.png'        },
-      { x:  2784, z:  -376, y: 125, iconPath: '/icons/redstone.png'    },
-      { x:   946, z:  -374, y: 142, iconPath: '/icons/coal.png'        },
+      { x:   -62, z:   708, y: 123, iconPath: '/icons/coal.png'         },
+      { x:  2784, z:  -376, y: 125, iconPath: '/icons/redstone.png'     },
+      { x:   946, z:  -374, y: 142, iconPath: '/icons/coal.png'         },
       { x:   615, z:  -781, y:  98, iconPath: '/icons/diamond.png'      },
       { x:  2433, z:  -661, y:  82, iconPath: '/icons/diamond.png'      },
       { x:   958, z:   995, y:  92, iconPath: '/icons/gold_ingot.png'   },
@@ -831,22 +831,23 @@
       { x:  1380, z:   630, y: 139, iconPath: '/icons/iron_ingot.png'   },
       { x:  1478, z: -1467, y: 137, iconPath: '/icons/lapis_lazuli.png' },
       { x:  -114, z:  1150, y: 120, iconPath: '/icons/lapis_lazuli.png' },
-      { x:  -558, z:   173, y:  74, iconPath: '/icons/redstone.png'    },
+      { x:  -558, z:   173, y:  74, iconPath: '/icons/redstone.png'     },
       { x:  -528, z:  -531, y: 110, iconPath: '/icons/lapis_lazuli.png' },
-      { x: -1408, z:  -781, y: 212, iconPath: '/icons/coal.png'        },
+      { x: -1408, z:  -781, y: 212, iconPath: '/icons/coal.png'         },
       { x: -1794, z:  -163, y: 132, iconPath: '/icons/iron_ingot.png'   },
-      { x: -1269, z:   -51, y:  83, iconPath: '/icons/copper_ingot.png'   },
+      { x: -1269, z:   -51, y:  83, iconPath: '/icons/copper_ingot.png' },
       { x: -1532, z:   700, y: 120, iconPath: '/icons/iron_ingot.png'   },
-      { x: -1509, z:   882, y: 108, iconPath: '/icons/coal.png'        },
+      { x: -1509, z:   882, y: 108, iconPath: '/icons/coal.png'         },
       { x: -1558, z:   854, y: 106, iconPath: '/icons/iron_ingot.png'   },
       { x: -2012, z:   901, y: 101, iconPath: '/icons/diamond.png'      },
-      { x: -2855, z:   981, y: 116, iconPath: '/icons/coal.png'        },
-      { x: -2798, z:  -673, y: 114, iconPath: '/icons/coal.png'        },
+      { x: -2855, z:   981, y: 116, iconPath: '/icons/coal.png'         },
+      { x: -2798, z:  -673, y: 114, iconPath: '/icons/coal.png'         },
       { x: -2939, z:  -858, y:  92, iconPath: '/icons/iron_ingot.png'   },
-      { x:  -414, z:  1594, y: 111, iconPath: '/icons/redstone.png'    },
-      { x:  -324, z:   690, y: 107, iconPath: '/icons/coal.png'        },
+      { x:  -414, z:  1594, y: 111, iconPath: '/icons/redstone.png'     },
+      { x:  -324, z:   690, y: 107, iconPath: '/icons/coal.png'         },
       { x:  -324, z:   686, y: 110, iconPath: '/icons/iron_ingot.png'   },
       { x:  -482, z: -1096, y:  88, iconPath: '/icons/iron_ingot.png'   },
+      { x:  1436, z:  1618, y:  79, iconPath: '/icons/diamond.png'      },
 
       { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 95,  text: 'Renkai'                  },
       { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 95,  text: 'Northelios'              },
