--- a/index.html
+++ b/index.html
@@ -807,6 +807,7 @@
       { x:  -324, z:   686, y: 110, iconPath: '/icons/iron_ingot.png'   },
       { x:  -482, z: -1096, y:  88, iconPath: '/icons/iron_ingot.png'   },
       { x:  1436, z:  1618, y:  79, iconPath: '/icons/diamond.png'      },
+      { x:  2930, z:  1069, y: 125, iconPath: '/icons/coal.png'         },
 
       { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 95,  text: 'Renkai'                  },
       { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 95,  text: 'Northelios'              },
