add resource nodes

--- a/index.html
+++ b/index.html
@@ -808,6 +808,9 @@
       { x:  -482, z: -1096, y:  88, iconPath: '/icons/iron_ingot.png'   },
       { x:  1436, z:  1618, y:  79, iconPath: '/icons/diamond.png'      },
       { x:  2930, z:  1069, y: 125, iconPath: '/icons/coal.png'         },
+      { x:  1725, z:   825, y: 116, iconPath: '/icons/coal.png'         },
+      { x:  2019, z:   188, y:  83, iconPath: '/icons/coal.png'         },
+      { x: -1873, z:  -305, y: 164, iconPath: '/icons/quartz.png'       },
 
       { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 95,  text: 'Renkai'                  },
       { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 95,  text: 'Northelios'              },
